tests/errors/index_out_of_range.py
# expect_error: IndexError
x = [1, 2, 3]
print(x[10])
